Refactored package file structure
Signed-off-by: Tom Wright <tom@inflatablecookie.com>

--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
     },
     "autoload": {
         "psr-4": {
-            "DecodeLabs\\Hydro\\": "src/Hydro"
+            "DecodeLabs\\Hydro\\": "src/"
         },
         "files": [
-            "src/global.php"
+            "src/Factory.php"
         ]
     },
     "extra": {
