--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     "require": {
         "php": "^8.1",
 
-        "decodelabs/atlas": "^0.10.7|^0.11",
+        "decodelabs/atlas": "^0.11",
         "decodelabs/coercion": "^0.2.7",
         "decodelabs/exceptional": "^0.4.4",
-        "decodelabs/veneer": "^0.10.19",
+        "decodelabs/veneer": "^0.11.1",
 
         "psr/http-client": "^1.0",
         "psr/http-message": "^2.0",
