--- a/composer.json
+++ b/composer.json
@@ -11,28 +11,31 @@
     "require": {
         "php": "^8.4",
 
-        "decodelabs/atlas": "^0.13.1",
-        "decodelabs/coercion": "^0.3.3",
-        "decodelabs/exceptional": "^0.6.1",
-        "decodelabs/veneer": "^0.12.8",
+        "decodelabs/atlas": "^0.14.1",
+        "decodelabs/coercion": "^0.3.5",
+        "decodelabs/exceptional": "^0.6.3",
+        "decodelabs/kingdom": "^0.1",
 
         "psr/http-client": "^1.0.3",
         "psr/http-message": "^2.0",
         "guzzlehttp/guzzle": "^7.9.3"
     },
     "require-dev": {
-        "decodelabs/collections": "^0.11.3",
+        "decodelabs/collections": "^0.12",
         "decodelabs/phpstan-decodelabs": "^0.7"
+    },
+    "conflict": {
+        "decodelabs/collections": "<0.12"
     },
     "suggest": {
         "decodelabs/collections": "Fetch JSON files over HTTP as Tree"
     },
     "autoload": {
         "psr-4": {
-            "DecodeLabs\\Hydro\\": "src/"
+            "DecodeLabs\\Hydro\\": "src/Hydro/"
         },
-        "files": [
-            "src/Factory.php"
+        "classmap": [
+            "src/Hydro.php"
         ]
     },
     "autoload-dev": {
